--- a/BreatheView.xib
+++ b/BreatheView.xib
@@ -8,8 +8,7 @@
 		<string key="IBDocument.HIToolboxVersion">353.00</string>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<integer value="53"/>
-			<integer value="43"/>
+			<integer value="3"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -45,7 +44,7 @@
 							<object class="IBUIButton" id="1035940585">
 								<reference key="NSNextResponder" ref="413555255"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{80, 15}, {141, 36}}</string>
+								<string key="NSFrame">{{80, 3}, {141, 36}}</string>
 								<reference key="NSSuperview" ref="413555255"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
@@ -57,9 +56,9 @@
 									<int key="NSfFlags">16</int>
 								</object>
 								<int key="IBUIButtonType">1</int>
-								<string key="IBUIHighlightedTitle">Go Back</string>
-								<string key="IBUIDisabledTitle">Go Back</string>
-								<string key="IBUISelectedTitle">Go Back</string>
+								<string key="IBUIHighlightedTitle">Breathe</string>
+								<string key="IBUIDisabledTitle">Breathe</string>
+								<string key="IBUISelectedTitle">Breathe</string>
 								<string key="IBUINormalTitle">Breathe</string>
 								<object class="NSColor" key="IBUIHighlightedTitleColor" id="350432093">
 									<int key="NSColorSpace">1</int>
@@ -334,19 +333,19 @@
 						<reference key="object" ref="413555255"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="1035940585"/>
 							<reference ref="528837116"/>
+							<reference ref="1035940585"/>
 						</object>
 						<reference key="parent" ref="719281570"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">49</int>
-						<reference key="object" ref="1035940585"/>
+						<int key="objectID">51</int>
+						<reference key="object" ref="528837116"/>
 						<reference key="parent" ref="413555255"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">51</int>
-						<reference key="object" ref="528837116"/>
+						<int key="objectID">49</int>
+						<reference key="object" ref="1035940585"/>
 						<reference key="parent" ref="413555255"/>
 					</object>
 					<object class="IBObjectRecord">
